# agent-security-eval

./: .gitignore  README.md  agent_eval_settings.json  pyproject.toml
.github/workflows/: smoke.yml
agent_eval/: backdoor_scan.py  behavior_tracker.py  compliance_templates.py  consistency.py  cot_audit.py  defense_gateway.py  delta_audit.py  docker_sandbox.py  eval_awareness.py  evaluation_frameworks.py  evo_attack.py  formal_model.py  framework_fingerprint.py  injection.py  literature.py  mcp_security.py  memory_env.py  memory_poison.py  monitor.py  oracle.py  pot_backdoor.py  release_gate.py  report.py  safety_standards.py  sandbox_monitor.py  source_audit.py  taint_analysis.py  task_spec.py  tool_call_graph.py  trajectory.py  vertical_pack.py
agent_eval/adapters/: __init__.py  base.py  claude_code.py  codex.py  generic.py  mcp_log.py
agent_eval/api/: main.py  settings.py
agent_eval/data/: trigger_library.json
agent_eval/environments/: base.py  calendar_env.py  email_env.py  filesystem_env.py  functions_runtime.py
agent_eval/mcp_proxy/: __init__.py  config.py  server.py
agent_eval/runners/: llm_runner.py
agent_eval/skill_scanner/: __init__.py  benchmark.py  discovery.py  l1_text.py  l2_capability.py  l3_behavior.py  l4_supply_chain.py  (+4 more)
benchmarks/: standard_v1.yaml  v1.0-tasks.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
sandbox/: Dockerfile  sandbox_agent.py
scripts/: ci_gate.py  freeze_benchmark.py  run_smoke.py
tests/: test_injection.py  test_oracle.py  test_report.py  test_task_env.py  test_trajectory.py
(+81 files in other folders)
