[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-security-eval"
version = "0.1.0"
description = "Agent security evaluation framework: stateful environments, trajectory recording, IPI attacks, three-dimensional scoring"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "openai>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
